# CppTestTemplate

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  run.sh
.github/: cpp.yml
src/: example.cpp  example.hpp
tests/: test.cpp
